Use toList instead of Collections.toList